# KiCadRoutingTools

./: .gitignore  CLAUDE.md  README.md  add_gnd_vias.py  blocking_analysis.py  build_router.py  check_connected.py  check_drc.py  check_orphan_stubs.py  check_pads.py  check_release_version.py  clearance_ledger.py  connectivity.py  diff_pair_loop.py  diff_pair_multipoint.py  diff_pair_routing.py  fab_tiers.py  fix_kicad_drc_settings.py  install_plugin.py  kicad_parser.py  kicad_writer.py  layer_swap_fallback.py  layer_swap_optimization.py  length_matching.py  list_nets.py  memory_debug.py  metadata.json  mps_layer_swap.py  net_queries.py  nudge_grazes.py  obstacle_cache.py  obstacle_map.py  output_writer.py  package_pcm.py  pcb_modification.py  phase3_routing.py  place_fanout_clearance.py  place_optimize.py  place_route_loop.py  plane_blocker_detection.py  (+22 more)
bga_fanout/: README.md  __init__.py  escape.py  geometry.py  grid.py  layer_balance.py  reroute.py  underpad.py
docs/: api-kicad-parser.md  api-kicad-writer.md  api-routing-config.md  claude-skills.md  configuration.md  differential-pairs.md  guide-corridor.md  placement-optimization.md  release-pipeline.md  route-plane.md  utilities.md
kicad_routing_plugin/: action_plugin.py  board_swaps.py  claude_gui.py  claude_plan.py  differential_gui.py  fanout_gui.py  gui_utils.py  planes_gui.py  settings_persistence.py  swig_gui.py
placement/: README.md  fanout_clearance.py  quench.py  writer.py
qfn_fanout/: README.md  __init__.py  geometry.py
rust_router/: Cargo.toml  README.md
rust_router/src/: router.rs
(+45 files in other folders)
