[package]
name = "grid_router"
version = "0.17.1"
edition = "2021"
# Versioning convention: this crate's version MUST equal the top-level /VERSION
# file, bumped together in the same commit you tag. The prebuilt binary bakes in
# CARGO_PKG_VERSION (exported as grid_router.__version__) and the runtime guard
# (startup_checks.py) requires installed == Cargo.toml; CI rebuilds every binary
# on every tag regardless, so locking them costs nothing. (Letting Cargo.toml lag
# /VERSION shipped a 0.17.0 binary as v0.17.1 and blocked all routing — enforced
# by check_release_version.py.)

[lib]
name = "grid_router"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
numpy = "0.23"  # NumPy support for PyO3
rustc-hash = "2.1"  # Fast hash for integer keys

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
